--- a/style.css
+++ b/style.css
@@ -307,23 +307,23 @@ h1, h2, h3, h4 {
 
 /* Background Images */
 .slide:first-child {
-  background: url('/carousel1.jpg') no-repeat center center/cover;
+  background: url('/img/carousel1.jpg') no-repeat center center/cover;
 }
 .slide:nth-child(2) {
-  background: url('/carousel2.jpg') no-repeat center top/cover;
+  background: url('/img/carousel2.jpg') no-repeat center top/cover;
 }
 .slide:nth-child(3) {
-  background: url('/carousel3.jpg') no-repeat center top/cover;
+  background: url('/img/carousel3.jpg') no-repeat center top/cover;
 }
 .slide:nth-child(4) {
-  background: url('/carousel4.jpg') no-repeat center top/cover;
+  background: url('/img/carousel4.jpg') no-repeat center top/cover;
 }
 .slide:nth-child(5) {
-  background: url('/carousel5.jpg') no-repeat center top/cover;
+  background: url('/img/carousel5.jpg') no-repeat center top/cover;
 }
 .slide:nth-child(6) {
-  background: url('/carousel6.jpg') no-repeat center top/cover;
+  background: url('/img/carousel6.jpg') no-repeat center top/cover;
 }
 .slide:nth-child(7) {
-  background: url('/carousel7.jpg') no-repeat center top/cover;
+  background: url('/img/carousel7.jpg') no-repeat center top/cover;
 }
